--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
+    "numeral": "^2.0.6",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "webpack": "^3.8.1",
