--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.3.1",
+    "node-sass": "^4.9.0",
+    "numeral": "^2.0.6",
+    "webpack": "^3.8.1"
+  },
+  "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.9.0",
-    "numeral": "^2.0.6",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.11.1"
-  },
-  "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0"
+    "eslint-plugin-import": "^2.12.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack-dev-server": "^2.11.1"
   }
 }
